# kit

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: auth.rs  config.rs  http.rs  main.rs
src/commands/: ai.rs  git.rs  github.rs  mod.rs
