[package]
name = "kit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "2.1"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"
open = "5.3.3"
reqwest = { version = "0.12.28", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
